# private-genomics-open-source

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  todo.md  vercel.json
src/: App.css  App.tsx  analytics.ts  api.ts  main.tsx  printReport.ts  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis.rs  error.rs  exports.rs  genomics.rs  hermes.rs  lib.rs  local_analysis.rs  main.rs  markers.rs  medication_checker.rs  morpheus.rs  pdf_export.rs  settings.rs
src/components/: BrandHelix.tsx  DnaHelixBackground.tsx
src/landing/: LandingPage.tsx  landing.css
src/views/: AnalyzeView.tsx  ChatView.tsx  ReportView.tsx  SettingsView.tsx  UploadView.tsx
