[package]
name = "personal-genomics-tauri"
version = "0.1.0"
description = "Private genomic analysis powered by Hermes + Morpheus (Kimi 2.6)"
authors = ["Personal Genomics"]
edition = "2021"

[lib]
name = "personal_genomics_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
flate2 = "1"
once_cell = "1"
regex = "1"
keyring = { version = "3", features = ["apple-native"] }
